[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/UI/Selectors/OutputDirSelector.gd" type="Script" id=1]

[node name="OutputDirSelector" type="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseDirLineEdit" type="LineEdit" parent="."]
margin_right = 974.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
editable = false

[node name="ChooseDirButton" type="Button" parent="."]
margin_left = 978.0
margin_right = 1002.0
margin_bottom = 24.0
text = "..."

[node name="HelpButton" type="Button" parent="."]
margin_left = 1006.0
margin_right = 1024.0
margin_bottom = 24.0
text = "?"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 610.0
margin_right = 1024.0
margin_bottom = 131.5
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/home/ryan/Documents/Godot/SlimeFarm"
current_path = "/home/ryan/Documents/Godot/SlimeFarm/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Output Directory"
dialog_text = "The directory to output the stats CSV to."
dialog_autowrap = true
[connection signal="pressed" from="ChooseDirButton" to="." method="_on_ChooseDirButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
